# arx

./: .gitignore  CLAUDE.md  Cargo.toml
crates/arx/: Cargo.toml
crates/arx-buffer/: Cargo.toml
crates/arx-buffer/src/: buffer.rs  history.rs  interval_tree.rs  lib.rs  properties.rs  rope.rs
crates/arx-buffer/tests/: integration.rs
crates/arx-config/: Cargo.toml
crates/arx-config/src/: discovery.rs  lib.rs  merge.rs  schema.rs  warning.rs
crates/arx-config/tests/: overrides.rs
crates/arx-core/: Cargo.toml
crates/arx-core/src/: column.rs  command.rs  completion.rs  editor.rs  event_loop.rs  file.rs  filter.rs  kedit.rs  lib.rs  palette.rs  registry.rs  search.rs  session.rs  stock.rs  window.rs
crates/arx-core/tests/: integration.rs
crates/arx-driver/: Cargo.toml
crates/arx-driver/src/: daemon.rs  driver.rs  ext_host.rs  ext_watcher.rs  input.rs  lib.rs  lsp.rs  remote_backend.rs  render.rs  state.rs  suspend.rs
crates/arx-driver/tests/: daemon.rs  ext_hot_reload.rs  integration.rs
crates/arx-gui/: Cargo.toml
crates/arx-gui/src/: app.rs  backend.rs  input.rs  lib.rs  renderer.rs
crates/arx-highlight/: Cargo.toml
crates/arx-highlight/src/: highlighter.rs  language.rs  lib.rs  theme.rs
crates/arx-keymap/: Cargo.toml
crates/arx-keymap/src/: commands.rs  engine.rs  key.rs  keymap.rs  lib.rs  parse.rs  profiles.rs
crates/arx-lsp/: Cargo.toml
crates/arx-lsp/src/: client.rs  codec.rs  config.rs  diagnostics.rs  lib.rs  position.rs  transport.rs
crates/arx-protocol/: Cargo.toml
crates/arx-protocol/src/: codec.rs  lib.rs  message.rs  transport.rs
crates/arx-render/: Cargo.toml
crates/arx-render/src/: backend.rs  cell.rs  diff.rs  face.rs  lib.rs  render_tree.rs  view.rs  view_state.rs
crates/arx-render/tests/: integration.rs
crates/arx-sdk/: Cargo.toml
crates/arx-sdk/src/: lib.rs
crates/arx-terminal/: Cargo.toml
crates/arx-terminal/src/: grid_bridge.rs  lib.rs  pty.rs
crates/arx-tree-sitter-perl/: Cargo.toml  build.rs
crates/arx-tree-sitter-perl/queries/: highlights.scm
crates/arx-tree-sitter-perl/src/: lib.rs  node-types.json
crates/arx/src/: main.rs
crates/arx/tests/: cli_config.rs
docs/: spec.md
examples/ext-hello/: Cargo.toml
examples/ext-hello/src/: lib.rs
