[workspace]
resolver = "3"
members = ["crates/arx-buffer", "crates/arx-core", "crates/arx-driver", "crates/arx-render"]

[workspace.dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"
thiserror = "2"
bitflags = "2"
compact_str = "0.8"
smallvec = "1"
unicode-segmentation = "1"
unicode-width = "0.2"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
arx-buffer = { path = "crates/arx-buffer" }
arx-core = { path = "crates/arx-core" }
arx-render = { path = "crates/arx-render" }
arx-driver = { path = "crates/arx-driver" }

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/ketbra/arx"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
format_collect = "allow"
needless_lifetimes = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
