[package]
name = "arx-buffer"
description = "Persistent rope-based buffer with text properties for the Arx editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ropey = "1.6.1"
bitflags = { workspace = true }
serde = { workspace = true }
