[package]
name = "arx-core"
description = "Arx editor event loop, command bus, and core editor state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["syntax"]
syntax = ["dep:arx-highlight"]

[dependencies]
arx-buffer = { workspace = true }
arx-highlight = { workspace = true, optional = true }
arx-keymap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
