[package]
name = "arx-driver"
description = "Arx editor driver: wires arx-core's event loop to arx-render's pipeline and a crossterm terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
arx-buffer = { workspace = true }
arx-core = { workspace = true }
arx-render = { workspace = true }
crossterm = { workspace = true }
futures-util = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
