[package]
name = "arx-driver"
description = "Arx editor driver: wires arx-core's event loop to arx-render's pipeline and a crossterm terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
arx-buffer = { workspace = true }
arx-config = { workspace = true }
arx-core = { workspace = true }
arx-keymap = { workspace = true }
arx-lsp = { workspace = true }
arx-protocol = { workspace = true }
lsp-types = { version = "0.97", features = ["proposed"] }
arx-render = { workspace = true }
arx-sdk = { workspace = true }
crossterm = { workspace = true }
futures-util = { workspace = true }
libloading = { workspace = true }
notify = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
unicode-segmentation = { workspace = true }

# `libc` is used on Unix by the Ctrl-Z suspend/resume handler in
# `suspend.rs` (calls `libc::raise(libc::SIGTSTP)`) and, in tests,
# by the extension hot-reload integration test.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
compact_str = { workspace = true }
