[package]
name = "arx-highlight"
description = "Tree-sitter syntax highlighting for the Arx editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
arx-buffer = { workspace = true }
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-c = "0.23"
tree-sitter-json = "0.24"
streaming-iterator = "0.1"
tracing = { workspace = true }
