[package]
name = "arx-highlight"
description = "Tree-sitter syntax highlighting for the Arx editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
arx-buffer = { workspace = true }
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-json = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-md = "0.3"
tree-sitter-yaml = "0.7"
tree-sitter-lua = "0.5"
tree-sitter-toml-ng = "0.7"
streaming-iterator = "0.1"
tracing = { workspace = true }
