[package]
name = "arx-keymap"
description = "Arx editor keymap engine: keys, chords, modal stacks, named-command resolution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
crossterm = { workspace = true }
