[package]
name = "arx-lsp"
description = "LSP client for the Arx editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
arx-buffer = { workspace = true }
lsp-types = { version = "0.97", features = ["proposed"] }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true, features = ["process"] }
url = "2"
tracing = { workspace = true }
thiserror = { workspace = true }
