[package]
name = "arx-protocol"
description = "IPC protocol between arx daemon and thin clients (message types + framing codec)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
arx-keymap = { workspace = true }
arx-render = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
compact_str = { workspace = true }
tempfile = { workspace = true }
